--- a/views/admin/index.handlebars
+++ b/views/admin/index.handlebars
@@ -1,1 +1,6 @@
-<button class="btn btn-success">teste</button>
+<a href="/admin/categorias">
+    <button class="btn btn-success">Categorias</button>
+</a>
+<a href="/admin/postagens">
+    <button class="btn btn-success">Postagens</button>
+</a>
