--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,33 +1,62 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand me-4" href="/">BlogNode</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Categorias
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            {{#if categorias}}
+              {{#each categorias}}
+                <li><a class="dropdown-item" href="/categoria/{{slug}}">{{nome}}</a></li>
+              {{/each}}
+            {{else}}
+              <li class="dropdown-item">Nenhuma categoria</li>
+            {{/if}}
           </ul>
         </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-        </li>
       </ul>
-      
+
+      <!-- Painel Admin centralizado -->
+      {{#if user}}
+        {{#if user.eAdmin}}
+          <ul class="navbar-nav mx-auto mb-2 ms-4 mb-lg-0">
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="adminDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Dashboard
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                <li><a class="dropdown-item" href="/admin/categorias">Categorias</a></li>
+                <li><a class="dropdown-item" href="/admin/postagens">Postagens</a></li>
+              </ul>
+            </li>
+          </ul>
+        {{/if}}
+      {{/if}}
+
+      <!-- Alinhado à direita -->
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        {{#if user}}
+          <li class="nav-item">
+            <a class="nav-link" href="/usuarios/logout">Logout</a>
+          </li>
+        {{else}}
+          <li class="nav-item">
+            <a class="nav-link" href="/usuarios/login">Login</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/usuarios/registro">Registrar</a>
+          </li>
+        {{/if}}
+      </ul>
     </div>
   </div>
 </nav>
